css/style.css
/* === DEFAULT | RESET STYLES === */

@import "normalize.css";

/* === CUSTOM WEB FONTS === */

@font-face {
  font-family: "Alpha Echo";
  src:
    url("../fonts/AlphaEcho.woff2") format("woff2"),
    url("../fonts/AlphaEcho.woff") format("woff");
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: "Tillana";
  src:
    url("../fonts/Tillana-Regular.woff2") format("woff2"),
    url("../fonts/Tillana-Regular.woff") format("woff");
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: "Tillana";
  src:
    url("../fonts/Tillana-Medium.woff2") format("woff2"),
    url("../fonts/Tillana-Medium.woff") format("woff");
  font-weight: 500;
  font-style: normal;
}

@font-face {
  font-family: "Tillana";
  src:
    url("../fonts/Tillana-SemiBold.woff2") format("woff2"),
    url("../fonts/Tillana-SemiBold.woff") format("woff");
  font-weight: 600;
  font-style: normal;
}

@font-face {
  font-family: "Finger Paint";
  src:
    url("../fonts/FingerPaint-Regular.woff2") format("woff2"),
    url("../fonts/FingerPaint-Regular.woff") format("woff");
  font-weight: normal;
  font-style: normal;
}

/* === GLOBAL VARIABLES === */

:root {
  --system-ui:
    system-ui, "Segoe UI", Roboto, Helvetica, Arial, sans-serif,
    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";

  --font-size-s: 0.875rem;
  --font-size-m: 1rem;
  --font-size-l: 1.125rem;
  --font-size-xl: 1.3125rem;
  --font-size-2xl: 1.5rem;
  --font-size-3xl: 2.652rem;

  --background-color-primary: hsl(0, 0%, 7.06%);
  --background-color-secondary: hsl(0, 0%, 15.69%);
  --foreground-color-primary: hsl(168.24, 83.61%, 23.92%);
  --foreground-color-secondary: hsl(164.06, 28.83%, 43.53%);
  --foreground-color-tertiary: hsl(163.02, 21.46%, 51.57%);
  --foreground-color-small-text: hsl(162.27, 21.36%, 59.61%);
  --white-color: hsl(0, 0%, 100%);
  --red-color: hsl(8.3, 100%, 81.57%);
}

/* === BASE STYLES === */

body {
  font-size: 21px;
  display: flex;
  flex-direction: column;
  min-height: 100vh;

  & .container {
    width: 80%;
    max-width: 800px;
    margin: 0 auto;
  }

  & .button {
    cursor: pointer;
    border-radius: 0.2em;
    border: none;
    transition:
      background 0.4s ease,
      opacity 0.4s ease,
      color 0.4s ease;
  }

  & .button:hover {
    background: var(--foreground-color-small-text);
  }

  & .button.unavailable:hover {
    background: var(--red-color);
    color: var(--background-color-primary);
  }

  & a {
    text-decoration: none;
    color: var(--white-color);
  }

  & p {
    word-break: break-all;
  }
}

/* === SITE HEADER === */

.site-header {
  background: var(--background-color-secondary);
  color: var(--foreground-color-secondary);
  padding: 0.3em;
}

.site-header__title {
  text-transform: uppercase;
  font-family: "Alpha Echo", var(--system-ui);
  letter-spacing: 0.15em;
  font-size: clamp(var(--font-size-xl), 3.5vw, var(--font-size-3xl));
}

/* === MAIN CONTENT === */

.main-content {
  background: var(--background-color-primary);
  flex: 1 1 100%;
  font-family: "Finger Paint", var(--system-ui);
  font-size: clamp(var(--font-size-l), 2.5vw, var(--font-size-2xl));
}

.container.main-content__score-container {
  display: flex;
  flex-direction: column;
  color: var(--white-color);
  justify-content: center;
  align-items: center;

  & .main-content__player {
    display: flex;
    gap: 2em;
    justify-content: center;
    align-items: center;
    background: var(--foreground-color-primary);
    margin-top: 1em;
    padding: 0.4em 0.8em;
    border-radius: 0.5em;
  }

  & .main-content__marker-container {
    padding: 0.8em;
    background-color: var(--background-color-secondary);
    border-radius: 0.5em;
    color: var(--foreground-color-primary);
  }

  & .main-content__player-details-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    gap: 1em;
  }

  & .main-content__player-name-container {
    display: flex;
    gap: 1em;
    justify-content: center;
    align-items: center;
  }

  & .main-content__player-score-container {
    & .main-content__player-score {
      padding: 1em 1.5em;
      background: var(--background-color-primary);
      border-radius: 0.5em;
      transition: transform 0.7s ease;
    }

    & .main-content__player-score.changed {
      transform: scale(0);
    }
  }

  & input[type="text"] {
    max-width: 5em;
    background: var(--background-color-secondary);
    color: var(--white-color);
    border-radius: 0.2em;
    padding: 0.1em 0.2em;
    border: none;
  }

  & .is-active {
    display: inline-block;
  }

  & .is-inactive {
    display: none;
  }

  & .main-content__icon {
    background: var(--background-color-secondary);
    padding: 0.3em;
    border-radius: 0.5em;
    color: var(--foreground-color-primary);
    font-weight: 900;
  }
}

& .main-content__buttons {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  grid-template-rows: repeat(3, 1fr);
  gap: 0.5em;
  align-content: center;
  max-width: 350px;
  margin: 0.5em auto;
  margin-bottom: 1em;

  & .tile {
    width: 100%;
    aspect-ratio: 1 / 1;
    font-size: clamp(var(--font-size-l), 2.5vw, var(--font-size-2xl));
    background: var(--background-color-secondary);
    color: var(--white-color);
  }
}

.main-content__current-player-indicator {
  margin: 1em 0;
  transition: transform 0.5s ease;

  & .main-content__current-player-name {
    text-align: center;
    color: var(--white-color);
    font-family: "Tillana", var(--system-ui);
  }
  & .main-content__current-player-name.changed {
    transform: scale(0);
  }
}

.main-content__player.current {
  border: 3px solid var(--red-color);
  transition: border 0.3s ease-in-out;
}

/* === DIALOG / MODAL === */

.modal {
  position: relative;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  background: var(--foreground-color-primary);
  max-width: 50ch;
  padding: 2em;
  border-radius: 0.5em;

  & .button {
    text-transform: uppercase;
    padding: 0.5em 2em;
    border: none;
  }

  & .button:hover {
    background: var(--background-color-secondary);
    color: var(--white-color);
  }
}

.modal[open] {
  display: flex;
  flex-direction: column;
  gap: 2em;
  justify-content: center;
  align-items: center;
}

.modal::backdrop {
  background: hsla(0, 0%, 15.69%, 0.5);
  backdrop-filter: blur(0.3em);
}

/* === SITE FOOTER === */

.site-footer {
  background: var(--background-color-secondary);
  color: var(--foreground-color-small-text);
  padding: 0.5em;
  width: 100%;
}

.site-footer__content {
  font-family: "Tillana", var(--system-ui);
  font-weight: 600;
  font-size: clamp(var(--font-size-m), 3vw, var(--font-size-l));
  text-align: center;
}

/* === MEDIA QUERIES === */

@media (width > 40em) {
  .container.main-content__score-container {
    flex-direction: row;
    gap: 2em;
  }
}

@media (width > 62.5em) {
  .site-header__title {
    text-align: center;
  }
}

